<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartSchedule</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel_scheduler">Cancel</string>
    <string name="done_scheduler">Done</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="start_page_empty_text">start_page_empty_text</string>
    <string name="add_menu">add_event</string>
    <string name="add_menu_title">Create Event</string>
    <string name="title_dialog_add_event">Create Event</string>
    <string name="hint_dialog_add_event">Please insert name event</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="create">Create</string>
    <string name="alarmLabel">Alarm</string>
    <string name="musicLabel">Music</string>
    <string name="ringerLabel">Ringer</string>
    <string name="alertsLabel">Notification</string>
    <string name="systemLabel">System</string>
    <string name="voicecallLabel">Voice Call</string>
    <string name="normal">Normal</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="advance_sound_off">Disable advanced sound</string>
    <string name="advance_sound_on">Enable advanced sound</string>

    <!-- action name -->
    <string name="name_sound_manager">Sound &amp; Volume</string>
    <string name="name_wifi">Wifi</string>
    <string name="name_wifi_hotspot">Wifi Hotspot</string>
    <string name="name_bluetooth">BlueTooth</string>
    <string name="name_start_application">Start application</string>

    <!-- setting name -->
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- start application-->
    <string name="start_application">Start application</string>
</resources>