<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarmLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25.0dip"
                android:drawableLeft="@drawable/alarm_icon"
                android:drawablePadding="5.0dip"
                android:drawableRight="@drawable/arrow_right"
                android:text="@string/alarmLabel"
                android:textColor="#ff000000"
                android:textSize="17.0dip"
                android:textStyle="bold" />

            <Button
                android:id="@+id/alarmRingtone"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_alignBaseline="@+id/alarmLabel"
                android:layout_marginLeft="6.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_toRightOf="@+id/alarmLabel"
                android:background="@drawable/spinner_default_holo_light"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/musicLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alarmLabel"
                android:layout_marginLeft="25.0dip"
                android:layout_marginTop="35.0dip"
                android:drawableLeft="@drawable/media_icon"
                android:drawablePadding="5.0dip"
                android:text="@string/musicLabel"
                android:textColor="#ff000000"
                android:textSize="17.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ringerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/musicLabel"
                android:layout_marginLeft="25.0dip"
                android:layout_marginTop="35.0dip"
                android:drawableLeft="@drawable/ringer_icon"
                android:drawablePadding="5.0dip"
                android:drawableRight="@drawable/arrow_right"
                android:text="@string/ringerLabel"
                android:textColor="#ff000000"
                android:textSize="17.0dip"
                android:textStyle="bold" />

            <Button
                android:id="@+id/phoneRingtone"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_alignBaseline="@+id/ringerLabel"
                android:layout_marginLeft="6.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_toRightOf="@+id/ringerLabel"
                android:background="@drawable/spinner_default_holo_light"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/alertsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ringerLabel"
                android:layout_marginLeft="25.0dip"
                android:layout_marginTop="35.0dip"
                android:drawableLeft="@drawable/alerts_icon"
                android:drawablePadding="5.0dip"
                android:drawableRight="@drawable/arrow_right"
                android:text="@string/alertsLabel"
                android:textColor="#ff000000"
                android:textSize="17.0dip"
                android:textStyle="bold" />

            <Button
                android:id="@+id/notificationRingtone"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_alignBaseline="@+id/alertsLabel"
                android:layout_marginLeft="6.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_toRightOf="@+id/alertsLabel"
                android:background="@drawable/spinner_default_holo_light"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/systemLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alertsLabel"
                android:layout_marginLeft="25.0dip"
                android:layout_marginTop="35.0dip"
                android:drawableLeft="@drawable/system_icon"
                android:drawablePadding="5.0dip"
                android:text="@string/systemLabel"
                android:textColor="#ff000000"
                android:textSize="17.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voiceLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/systemLabel"
                android:layout_marginLeft="25.0dip"
                android:layout_marginTop="35.0dip"
                android:drawableLeft="@drawable/voice_icon"
                android:drawablePadding="5.0dip"
                android:text="@string/voicecallLabel"
                android:textColor="#ff000000"
                android:textSize="17.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarmLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/alarmLabel"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="21.0dip"
                android:layout_marginTop="4.0dip"
                android:gravity="right"
                android:minWidth="35.0dip"
                android:textColor="#ff999999"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/musicLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/musicLabel"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="21.0dip"
                android:layout_marginTop="4.0dip"
                android:gravity="right"
                android:minWidth="35.0dip"
                android:textColor="#ff999999"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/alertLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/alertsLabel"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="21.0dip"
                android:layout_marginTop="4.0dip"
                android:gravity="right"
                android:minWidth="35.0dip"
                android:textColor="#ff999999"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/ringerLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ringerLabel"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="21.0dip"
                android:layout_marginTop="4.0dip"
                android:gravity="right"
                android:minWidth="35.0dip"
                android:textColor="#ff999999"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/systemLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/systemLabel"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="21.0dip"
                android:layout_marginTop="4.0dip"
                android:gravity="right"
                android:minWidth="35.0dip"
                android:textColor="#ff999999"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/voiceLvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/voiceLabel"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="21.0dip"
                android:layout_marginTop="4.0dip"
                android:gravity="right"
                android:minWidth="35.0dip"
                android:textColor="#ff999999"
                android:textSize="20.0sp" />

            <SeekBar
                android:id="@+id/alarm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alarmLabel"
                android:layout_marginLeft="12.0dip"
                android:layout_toLeftOf="@+id/alarmLvl"
                android:gravity="center"
                android:maxHeight="10.0dip"
                android:minHeight="10.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:soundEffectsEnabled="true"
                android:thumbOffset="16.0dip" />

            <SeekBar
                android:id="@+id/music"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/musicLabel"
                android:layout_marginLeft="12.0dip"
                android:layout_toLeftOf="@+id/musicLvl"
                android:gravity="center"
                android:maxHeight="10.0dip"
                android:minHeight="10.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:soundEffectsEnabled="true"
                android:thumbOffset="16.0dip" />

            <SeekBar
                android:id="@+id/alerts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alertsLabel"
                android:layout_marginLeft="12.0dip"
                android:layout_toLeftOf="@+id/alertLvl"
                android:gravity="center"
                android:maxHeight="10.0dip"
                android:minHeight="10.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:soundEffectsEnabled="true"
                android:thumbOffset="16.0dip" />

            <SeekBar
                android:id="@+id/ringer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ringerLabel"
                android:layout_marginLeft="12.0dip"
                android:layout_toLeftOf="@+id/ringerLvl"
                android:gravity="center"
                android:maxHeight="10.0dip"
                android:minHeight="10.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:soundEffectsEnabled="true"
                android:thumbOffset="16.0dip" />

            <SeekBar
                android:id="@+id/system"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/systemLabel"
                android:layout_marginLeft="12.0dip"
                android:layout_toLeftOf="@+id/systemLvl"
                android:gravity="center"
                android:maxHeight="10.0dip"
                android:minHeight="10.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:soundEffectsEnabled="true"
                android:thumbOffset="16.0dip" />

            <SeekBar
                android:id="@+id/voice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/voiceLabel"
                android:layout_marginLeft="12.0dip"
                android:layout_toLeftOf="@+id/voiceLvl"
                android:gravity="center"
                android:maxHeight="10.0dip"
                android:minHeight="10.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:soundEffectsEnabled="true"
                android:thumbOffset="16.0dip" />

            <!-- TODO chua dung den reference den AudioManager -->
<!--             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/voice"
                android:layout_marginTop="30.0dip"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="8.0dip"
                android:paddingRight="8.0dip" >

                <ToggleButton
                    android:id="@+id/toggleSilent"
                    android:layout_width="0.0dip"
                    android:layout_height="45.0dip"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginLeft="6.0dip"
                    android:layout_marginTop="2.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_toggle_holo_dark"
                    android:paddingTop="5.0dip"
                    android:prompt="@string/mode_menu_title"
                    android:textColor="#ff000000"
                    android:textOff="@string/silent_button"
                    android:textOn="@string/silent_button" />

                <ToggleButton
                    android:id="@+id/ToggleButtonVibe"
                    android:layout_width="0.0dip"
                    android:layout_height="45.0dip"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginRight="6.0dip"
                    android:layout_marginTop="2.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_toggle_holo_dark"
                    android:paddingTop="5.0dip"
                    android:prompt="@string/mode_menu_title"
                    android:textColor="#ff000000"
                    android:textOff="@string/vibrate_button"
                    android:textOn="@string/vibrate_button" />

                <Button
                    android:id="@+id/ButtonVibe"
                    android:layout_width="0.0dip"
                    android:layout_height="45.0dip"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginRight="6.0dip"
                    android:layout_marginTop="2.0dip"
                    android:layout_weight="1.0"
                    android:paddingTop="5.0dip"
                    android:prompt="@string/mode_menu_title"
                    android:text="@string/vibrate_button"
                    android:textColor="#ff000000" />
            </LinearLayout> -->

   <!--          <LinearLayout
                style="@style/ButtonBarSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/voice"
                android:layout_marginTop="95.0dip"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip" >

                <Button
                    android:id="@+id/saveButton"
                    style="@style/ButtonSelector"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/save"
                    android:textColor="#ff000000" />

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/ButtonSelector"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/cancel"
                    android:textColor="#ff000000" />
            </LinearLayout> -->
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>